# kubernetes

./: .gitignore  README.md
aks/: main.tf  output.tf  variables.tf
aks/scripts/: automation.tf  cloud-init.yaml
hello-world-go/: Dockerfile  manifest.yaml  values.yaml
hello-world-go/app/: main.go
hello-world-go/app/templates/: index.html
hello-world-go/chart/: Chart.yaml
hello-world-go/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  role.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
hello-world-go/chart/templates/tests/: test-connection.yaml
hello-world-py/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  manifest.yaml  pyproject.toml
hello-world-py/config/: __init__.py
hello-world-py/templates/: index.j2.html
tools/: populate-helm.sh
