[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Simple hello world microservice"
authors = ["Apau, Emmanuel <e@mechanicode.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
uvicorn = "^0.15.0"
Jinja2 = "^3.1.3"
Flask = "^2.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
